# open-proart-studiobook-H7600Z-dial

./: README.md  install.sh  openknob-config.desktop  openknob-daemon.service  openknob-overlay.desktop  pyproject.toml
openknob/: __init__.py  actions.py  config_ui.py  daemon.py  hid_action_test.py  hid_probe.py  overlay.py  profiles.py  settings.py  window_watcher.py
openknob.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
profiles/: default.json
